--- a/css/bcmb.css
+++ b/css/bcmb.css
@@ -36,3 +36,13 @@ $AccentRed			: #76232F;
 .navbar-custom .nav-item:hover .nav-link {
     color: #F1C400;
 }
+
+.table-text-md {
+  font-size: 0.8rem;
+}
+
+body {
+	font-family: Gotham, "Helvetica Neue", Helvetica, Arial, "sans-serif";
+	background-color: #DDD;
+	margin: 0;
+}
